@@ -1,4 +1,8 @@
 2002-05-11  Samuel Stringham  <sams@e-sa.com>
+	
+	* actions.c: Fix crash in actions dialog. Fixes #81397.
+
+2002-05-11  Samuel Stringham  <sams@e-sa.com>
 
 	* logview.c: remove bogus spacing. Fixes #81399.
 
